tests/ui/rfc-2632-const-trait-impl/specialization/const-default-bound-non-const-specialized-bound.stderr
error[E0119]: conflicting implementations of trait `Baz`
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:40:1
   |
LL | impl<T> const Baz for T
   | ----------------------- first implementation here
...
LL | impl<T> const Baz for T
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
